--- a/index.html
+++ b/index.html
@@ -10,8 +10,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@400..800&family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Arapey:ital@0;1&family=Bebas+Neue&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"></link>
     <link rel="stylesheet" href="cadastro.css">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 
@@ -38,62 +54,75 @@
                             <li><label for="menuCheckbox" onclick="this.parentNode.click();"><a href="#login">PARTICIPE</a></label></li>
                         </ul>
                     </div>
-                    <div class="space"></div>
-                    <div class="logo_senai"></div>
                 </div>
 
                 <div class="container_beg">
                 <div class="left_page">
-                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                    <p class="left">Preparem-se</p>
-                    <p class="left">para uma jornada</p>
-                    <p class="left">épica com</p>
-                    <center>
-                    <img src="img/vaiiiiiiiiiiii-removebg-preview.png" style="width: 200px;"></center>
                 </div>
                 <div class="right_page">
-                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                    <p class="right_school">Gaspar Ricardo Jr.</p>
-                    <p class="right_title">Interclasses <br>SENAI</p>
-                    <p class="right_date">25/11 a 28/11</p>
+                    <div class="title-beg">
+                        <br><br>
+                        <p class="right_school">Gaspar Ricardo Jr.</p>
+                        <p class="right_title">INTERCLASSE
+                        <p class="right_date">SENAI</p>
+                    </div>
+
+                    <br><br><br><br><br><br><br><br><br><br><br><br>
+                    <div class="title-med">
+                        <div class="title-end">
+                            <p class="left">Preparem-se</p>
+                            <p class="left">para uma <span class="edit-color">jornada</span></p>
+                            <p class="left"><span class="edit-color">épica</span> com</p>
+                            <p class="aapm-font">AAPM</p>
+                            <img src="img/vaiiiiiiiiiiii-removebg-preview.png" style="width: 110px;" class="img-aapm">
+                        </div>
+                    </div>
+                    
                 </div>
                 </div>
             </div>
         </section>
 
-        <section class="secao_esportiva" id="basquete">
+        <section class="secao_esportiva" id="basquete" data-aos="fade-left" data-aos-delay="200" data-aos-duration="1000" data-aos-offset="200">
             <div class="overlay">
-                <div class="container_med">
-                    <p class="text_deco">O interclasse é o espaço</p>
-                    <p class="text_deco">onde a disciplina da sala</p>
-                    <p class="text_deco">encontra a paixão do jogo</p>
-                    <br><br>
-                    <hr>
+                <div class="container_bola">
+                    <div class="container_med">
+                        <div class="text-left">
+                            <p class="text_deco">O <span class="interclasse-espaco">interclasse</span> é o espaço</p>
+                        <p class="text_deco">onde a disciplina da sala</p>
+                        <p class="text_deco">encontra a <span class="paixao-espaco">paixão</span> do jogo</p>
+                        </div>
+                        <br><br>
+                        <hr>
+                    </div>
+                    <div class="image-right">
+                            <div class="image_container">
+                                <img src="img/pique jogador.jpg" class="image-edit">
+                            </div>
+                        </div>
                 </div>
             </div>
         </section>
 
-        <section class="secao_esportiva" id="tenis">
+        <section class="secao_esportiva" id="tenis" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-offset="200">
             <div class="overlay">
                 <div class="container_esp">
                     <div class="title_div">
                         <h1 class="sports_title">ESPORTES</h1>
                     </div>
                     <div class="box_esportes">
-                        <p class="box_title">Verifique os esportes disponíveis</p>
-                        <br>
                         <div class="container_games">
                             <div class="sports_style">
-                                <p class="esportes">Futebol</p>
+                                <img src="img/1.png" class="edit-img">
                             </div>
                             <div class="sports_style">
-                                <p class="esportes">Vôlei</p>
+                                <img src="img/2.png" class="edit-img">
                             </div>
                             <div class="sports_style">
-                                <p class="esportes">Basquete</p>
+                                <img src="img/3.png" class="edit-img">
                             </div>
                             <div class="sports_style">
-                                <p class="esportes">Tênis de Mesa</p>
+                                <img src="img/4.png" class="edit-img">
                             </div>
                         </div>
                     </div>
@@ -101,58 +130,27 @@
             </div>
         </section>
 
-        <section class="secao_esportiva" id="slider_esportes">
-            <div class="slider">
-                <div class="slides">
-                <div class="slide">
-                    <img src="img/futebol.webp" alt="Imagem 1">
-                    <div class="slide-texto">
-                        <p class="titulo_slider">Futebol</p>
-                    </div>
-                </div>
-                <div class="slide">
-                    <img src="img/volei.jpeg" alt="Imagem 2">
-                    <div class="slide-texto">
-                        <p class="titulo_slider">Vôlei</p>
-                    </div>
-                    </div>
-                <div class="slide">
-                    <img src="img/basquete.jpg" alt="Imagem 3">
-                    <div class="slide-texto">
-                        <p class="titulo_slider">Basquete</p>
-                    </div>
-                </div>
-                <div class="slide">
-                    <img src="img/ping pong.webp" alt="Imagem 4">
-                    <div class="slide-texto">
-                        <p class="titulo_slider">Vôlei</p>
-                    </div>
-                </div>
-                </div>
-        <div class="dots">
-            <span class="dot active" onclick="irParaSlide(0)"></span>
-            <span class="dot" onclick="irParaSlide(1)"></span>
-            <span class="dot" onclick="irParaSlide(2)"></span>
-            <span class="dot" onclick="irParaSlide(3)"></span>
-            </div>
-            <script src="slider.js"></script>
-        </div>
-        </section>
         
-        <section class="secao_esportiva" id="roxo">
+        <section class="secao_esportiva" id="roxo" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-offset="200">
             <div class="overlay">
-                <div class="list_aapm">
-                    <p class="aapm_title">Associado AAPM: Só Vantagens</p>
-                    <p class="aapm_title">para</p>
-                    <p class="aapm_title">Você!</p>
-                    <br><br><br><br><br>
+                <div class="container_aapm">
+                    <div class="list_aapm">
+                        <br><br><br><br><br>
+                        <p class="title-aapm">SOBRE A AAPM</p>
+                        <P class="subtitle-aapm">Só Vantagens para Você!</P>
+                        <div class="container_text">
+                            <p class="text-aapm">A AAPM (Associação de Pais e Mestres) é uma organização que colabora diretamente para tornar a escola um lugar ainda melhor. Ao se tornar associado, você apoia melhorias reais no ambiente escolar e ainda aproveita vários benefícios incríveis!</p>
+                        </div>
+                        <br>
+                        <div class="container_beneficios">
+                            <p class="text-blue">Passeios inesquecíveis</p>
+                            <p class="text-blue">Brindes exclusivos só para associados</p>
+                            <p class="text-red">Wi-Fi liberado na escola (quem vive sem isso?)</p>
+                            <p class="text-red">Melhorias na estrutura e no dia a dia da escola</p>
+                        </div>
+                    </div>
                     <div class="list_benefits">
-                        <ul>
-                            <li class="elements_list">Passeios irados</li>
-                            <li class="elements_list">Brindes exclusivos</li>
-                            <li class="elements_list">Wi-Fi liberado na escola (esse é essencial!)</li>
-                            <li class="elements_list">Outras melhorias que fazem a diferença</li>
-                        </ul>
+                        <img src="img/aapm.png" class="aapm-editor">
                     </div>
                 </div>
             </div>
@@ -209,19 +207,22 @@
             <script src="cadastro.js"></script>
             </div>
         </section>
-        <br><br><br><br><br>
 
         <footer>
             <div class="container_end">
                 <div class="div_left">
-                    <p class="about_us">Sobre nós:</p>
-                    <br><br><br>
                     <p class="about_us">Site desenvolvido por:</p>
+                    <br><br>
                     <div class="list_list">
-                        <ul>
-                            <li class="names">Guilherme Barbi</li>
-                            <li class="names">Jhenifer Aguirra</li>
-                        </ul>
+                        <a href="https://github.com/Clxt0Tm" class="github_icon">
+                            <img src="img/github icon.png" style="width: 50px;">
+                            <p class="name_editor">Guilherme Barbi</p>
+                        </a>
+                        <br>
+                        <a href="https://github.com/jheaguirra" class="github_icon">
+                            <img src="img/github icon.png" style="width: 50px;">
+                            <p class="name_editor">Jhenifer Aguirra</p>
+                        </a>
                     </div>
                 </div>
                 <div class="div_mid">
@@ -240,5 +241,9 @@
                 </div>
             </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+        <script>
+        AOS.init();
+        </script>
 </body>
 </html>
